bin_PROGRAMS = em

em_SOURCES = \
$(top_srcdir)/ansi.c \
$(top_srcdir)/basic.c \
$(top_srcdir)/bind.c \
$(top_srcdir)/buffer.c \
$(top_srcdir)/crypt.c \
$(top_srcdir)/display.c \
$(top_srcdir)/eval.c \
$(top_srcdir)/exec.c \
$(top_srcdir)/file.c \
$(top_srcdir)/fileio.c \
$(top_srcdir)/ibmpc.c \
$(top_srcdir)/input.c \
$(top_srcdir)/isearch.c \
$(top_srcdir)/line.c \
$(top_srcdir)/lock.c \
$(top_srcdir)/main.c \
$(top_srcdir)/pklock.c \
$(top_srcdir)/posix.c \
$(top_srcdir)/random.c \
$(top_srcdir)/region.c \
$(top_srcdir)/search.c \
$(top_srcdir)/spawn.c \
$(top_srcdir)/tcap.c \
$(top_srcdir)/termio.c \
$(top_srcdir)/vmsvt.c \
$(top_srcdir)/vt52.c \
$(top_srcdir)/window.c \
$(top_srcdir)/word.c \
$(top_srcdir)/names.c \
$(top_srcdir)/globals.c \
$(top_srcdir)/version.c \
$(top_srcdir)/usage.c \
$(top_srcdir)/wrapper.c \
$(top_srcdir)/utf8.c \
$(top_srcdir)/util.c


em_CPPFLAGS =-I$(top_srcdir)/ -DAUTOCONF -DPOSIX -DUSG -D_BSD_SOURCE -D_SVID_SOURCE -D_XOPEN_SOURCE=600
em_LDFLAGS = -lcurses


